src/test/deca/context/invalid/assign_float_to_int_inside_method.deca
/*
    Description : Assignation d'un flottant à un entier à l'intérieur d'une méthode

    Résultat : Erreur contextuelle
*/
class A{
    void x(float a, float b){
        int c = a;
    }
}
